# nri_scheduler

./: Cargo.toml  README.md  cors.conf  docker-compose.yml  env.example  eslint.config.mjs  nri.service  openapi.json  package-lock.json  package.json  scripts.sh  site.conf  todo.md  tsconfig.json  vite.config.js  zopfli.sh
client/: index.html
client/src/: api.ts  index.tsx  utils.ts
client/src/components/: dialog.tsx  event-item.tsx  grid-layout.tsx  header.tsx  layout.tsx
client/src/components/pages/: index.ts  mastery.tsx  profile.tsx
client/src/components/pages/calendar/: calendar-filter.tsx  calendar.css  calendar.tsx  company.tsx  event.tsx  location.tsx
client/src/components/pages/company/: company.tsx
client/src/components/pages/event/: edit-event.tsx  event-alert.tsx  event-dialog.tsx  event.tsx
client/src/components/pages/home/: home.tsx
client/src/components/pages/location/: location.tsx
client/src/components/pages/not-found/: not-found.tsx
client/src/components/pages/profile/: empty-list.tsx  profile-autocomplete.tsx  profile-edit.tsx  profile-info.tsx  profile-picture.tsx  profile-update.tsx  profile.data.ts  profile.tsx  short-profile.tsx
client/src/components/pages/profile/camplist/: camplist.tsx
client/src/components/pages/profile/complist/: complist.tsx
client/src/components/pages/profile/eventlist/: index.tsx
client/src/components/pages/regions/: cityForm.tsx  regionForm.tsx  regions.jsx  timezones.tsx
client/src/components/pages/sign-in/: singin.tsx
client/src/components/pages/sign-up/: signup.tsx
client/src/components/pages/verification/: verification.tsx
client/src/components/ui/: avatar.tsx  checkbox.tsx  close-button.tsx  drawer.tsx  field.tsx  hover-card.tsx  icons.tsx  input-group.tsx  password-input.tsx  popover.tsx  provider.tsx  toaster.tsx
client/src/store/: checkboxStore.ts  event.ts  eventList.ts  fetching.ts  filters.ts  locations.ts  mastery.ts  profile.ts  regions.ts  sharedDataStore.ts  tabsStore.ts  tz.ts
migrations/: 20250308000000_users_add_about_and_avatsr.down.sql  20250308000000_users_add_about_and_avatsr.up.sql  20250314000000_company_cover.down.sql  20250314000000_company_cover.up.sql  20250315000000_regions.down.sql  20250315000000_regions.up.sql  20250315000001_users_city.down.sql  20250315000001_users_city.up.sql  20250319000000_timezon_offsets.down.sql  20250319000000_timezon_offsets.up.sql  20250325000000_email_verified.down.sql  20250325000000_email_verified.up.sql  20250331000000_event_cancelled.down.sql  20250331000000_event_cancelled.up.sql  20250405000000_telegram.down.sql  20250405000000_telegram.up.sql  20250425000000_location_city.down.sql  20250425000000_location_city.up.sql  20250427000000_location_map_link.down.sql  20250427000000_location_map_link.up.sql  20250522000000_event_style.down.sql  20250522000000_event_style.up.sql
server/: auth.rs  avatar.rs  cookie.rs  cors.rs  email.rs  graceful_shutdown.rs  image.rs  lib.rs  log.rs  main.rs  router.rs  shared.rs  state.rs
server/config/: init.rs  mod.rs
server/dto/: auth.rs  common.rs  company.rs  event.rs  location.rs  mod.rs
server/handlers/: mod.rs  sse.rs
server/handlers/apps/: mod.rs
server/handlers/companies/: mod.rs
server/handlers/events/: mod.rs
server/handlers/locations/: mod.rs
server/handlers/regions/: mod.rs
server/handlers/verify/: mod.rs
server/repository/: mod.rs  models.rs
server/repository/implementations/postgr/: mod.rs  pool.rs
server/shared/: deserialize_list.rs  deserialize_missed.rs  missable.rs  mod.rs
server/system_models/: scenario_status.rs
server/telegram/: mod.rs
