[package]
name = "nri_scheduler"
description = "my outstanding trpg scheduler"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nri_scheduler"
path = "server/main.rs"

[lib]
name = "nri_scheduler"
path = "server/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
argon2 = "0.5.3"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["cookie"] }
axum-server = { version = "0.7.2", features = ["tls-rustls"], optional = true }
chrono = { version = "0.4.41", features = ["serde"] }
derive-masked = "0.1.0"
futures = "0.3.31"
futures-util = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
josekit = "0.10.3"
lettre = { version = "0.11.16", default-features = false, features = ["builder", "pool", "rustls-tls", "smtp-transport"] }
rand = "0.9.1"
regex = "1.11.1"
reqwest = { version = "0.12.18", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
sqlx = { version = "0.8.6", default-features = false, features = ["derive", "postgres", "runtime-tokio", "tls-none"] }
sqlx-core = { version = "0.8.6", features = ["migrate"] }
sqlx-postgres = { version = "0.8.6", features = ["migrate", "chrono", "uuid"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tower-http = { version = "0.6.4", features = ["fs"], optional = true }
utoipa = { version = "5.3.1", features = ["uuid", "chrono"], optional = true }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"], optional = true }
uuid = { version = "1.17.0", features = ["serde"] }

[features]
default = []
cors = []
https = ["axum-server"]
static = ["tower-http"]
swagger = ["utoipa", "utoipa-swagger-ui"]
vite = []

[dev-dependencies]
cargo-husky = { version = "^1.5.0", default-features = false, features = ["user-hooks"] }

[lints.clippy]
needless_return = "allow"
